# widget2code

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  benchmark.json  index.html  package-lock.json  package.json  test-doubao.js
libs/generator/: README.md  pyproject.toml
libs/generator/widgetdsl_generator/: __init__.py  cli.py  config.py  exceptions.py  generator.py
libs/generator/widgetdsl_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
libs/generator/widgetdsl_generator/generation/: __init__.py  component.py  generator.py  widget.py
libs/generator/widgetdsl_generator/generation/component/: __init__.py  generator.py
libs/generator/widgetdsl_generator/generation/widget/: __init__.py  batch.py  single.py
libs/generator/widgetdsl_generator/perception/: graph_extraction.py  icon_extraction.py  image_preprocessing.py
libs/generator/widgetdsl_generator/perception/icon/: build_library.py  grounding.py  image_utils.py  query_caption.py  search_fused.py
libs/generator/widgetdsl_generator/perception/layout/: __init__.py  perception.py
libs/generator/widgetdsl_generator/prompts/graph/: graph-detection-prompt.md
libs/generator/widgetdsl_generator/prompts/graphs/: piechart.md  progressring.md
libs/generator/widgetdsl_generator/prompts/widget2dsl/: widget2dsl-graph-modified.md  widget2dsl-graph.md  widget2dsl-sf-lucide.md  widget2dsl.md
libs/generator/widgetdsl_generator/services/: __init__.py
libs/generator/widgetdsl_generator/services/icon/: __init__.py  build_library.py  query_caption.py  query_embedding.py  search_fused.py
libs/generator/widgetdsl_generator/utils/: __init__.py  validation.py  visualization.py
libs/python/: README.md  pyproject.toml
libs/python/generator/: __init__.py  cli.py  config.py  exceptions.py
libs/python/generator/generation/: __init__.py
libs/python/generator/generation/component/: generator.py
libs/python/generator/generation/widget/: __init__.py  batch.py  single.py
libs/python/generator/perception/: __init__.py  applogo_extraction.py  color_extraction.py  graph_extraction.py  icon_extraction.py  image_preprocessing.py
libs/python/generator/perception/color/: color_picker.py
libs/python/generator/perception/graph/: __init__.py  detection.py  pipeline.py
libs/python/generator/perception/icon/: grounding.py  post_process.py  query_caption.py  query_embedding.py  search_fused.py
libs/python/generator/perception/layout/: __init__.py  detection.py  utils.py
libs/python/generator/perception/primitive/: __init__.py  primitive_loader.py
libs/python/generator/prompts/: fix-prompts.sh
libs/python/generator/prompts/dynamic/image2react/: dynamic-component-image-prompt.md
libs/python/generator/prompts/graphs/: barchart.md  common.md  linechart.md  piechart.md  progressbar.md  radarchart.md  sparkline.md  stackedbarchart.md
libs/python/generator/prompts/primitives/: applogo.md  button.md  checkbox.md  container.md  divider.md  icon.md  image.md  indicator.md  mapimage.md  slider.md  switch.md  text.md
libs/python/generator/prompts/prompt2dsl/: prompt2dsl-sf-lucide.md  prompt2dsl-with-components.md  prompt2dsl-with-reference.md  prompt2dsl.md
libs/python/generator/prompts/widget2dsl/: widget2dsl-graph-modified.md  widget2dsl-graph.md  widget2dsl-sf-lucide.md  widget2dsl.md
libs/python/generator/providers/: __init__.py  openai.py
libs/python/generator/utils/: __init__.py  artifact_manager.py  image_helpers.py  logger.py  prompt_loader.py  rate_limiter.py  text_processing.py  visualization.py
libs/python/widgetdsl_generator/: exceptions.py
libs/python/widgetdsl_generator.egg-info/: entry_points.txt  requires.txt
libs/python/widgetdsl_generator/perception/: __init__.py
libs/python/widgetdsl_generator/perception/graph/: detection.py
libs/python/widgetdsl_generator/perception/icon/: query_embedding.py
libs/python/widgetdsl_generator/prompts/graphs/: common.md  linechart.md  progressring.md  radarchart.md  sparkline.md
libs/python/widgetdsl_generator/prompts/prompt2dsl/: prompt2dsl-sf-lucide.md
libs/python/widgetdsl_generator/utils/: logger.py
(+10681 files in other folders)
