[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "widgetdsl-generator"
version = "0.3.0"
description = "WidgetDSL Generator - AI-powered widget generation from images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow",
    "pyyaml",
    "playwright",
    "aiofiles",
    "requests",
    "accelerate",
    "numpy",
    "opencv-python",
    "torch",
    "open-clip-torch",
    "transformers",
    "faiss-cpu",
    "cairosvg",
    "tqdm",
]

[project.optional-dependencies]
api = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "python-dotenv",
    "provider-hub",
]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
generate-widget = "widgetdsl_generator.cli:main"
generate-widget-batch = "widgetdsl_generator.cli:batch_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["widgetdsl_generator*"]

[tool.setuptools.package-data]
widgetdsl_generator = ["**/*.yaml", "**/*.json"]
