[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "generator"
version = "0.0.0"
description = "WidgetDSL Generator - AI-powered widget generation from images"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow",
    "pyyaml",
    "playwright",
    "aiofiles",
    "requests",
    "accelerate",
    "numpy",
    "opencv-python",
    "torch",
    "open-clip-torch",
    "transformers",
    "faiss-cpu",
    "cairosvg",
    "tqdm",
    "rich",
]

[project.optional-dependencies]
api = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "python-dotenv",
    "provider-hub",
]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
generate-widget = "generator.cli:main"
generate-widget-batch = "generator.cli:batch_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["generator*"]

[tool.setuptools.package-data]
generator = ["**/*.yaml", "**/*.json"]
